--- a/index.html
+++ b/index.html
@@ -3,83 +3,11 @@
   <head>
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>maple all</title>
+    <title>Maplestory Information</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/default.css" />
-    <style>
-.wrap {
-  width: 280px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-}
-.wrap > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 15px;
-}
-.input-wrap {
-  column-gap: 5px;
-}
-.input-wrap input {
-  flex: 1;
-}
-.char_card {
-  width: 100%;
-  height: 150px;
-  border: 1px solid #cccccc;
-  color: #444444;
-  box-shadow: 0 3px 2px rgba(0,0,0,0.1);
-  border-radius: 10px;
-  padding: 10px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.char_info {
-  display: flex;
-  align-items: center;
-  column-gap: 20px;
-  width: 100%;
-}
-.char_info ul {
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-}
-.char_info ul li:first-child {
-  font-weight: 800;
-}
-
-.stat_card {
-  width: 100%;
-  height: auto;
-  border: 1px solid #cccccc;
-  color: #444444;
-  box-shadow: 0 3px 2px rgba(0,0,0,0.1);
-  border-radius: 10px;
-  padding: 10px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.stat_card > div {
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-
-    </style>
   </head>
   <body>
     
