--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
 
       const fn_mapleApi = async function(path, queryString){
         const apiUrl = 'https://open.api.nexon.com' + path;
+        let apiKey = 'test_9c0da748b4d6c40ab3b3d3258710357e086fc6dacbaa3aba2d497ea29c71951c41fbe26d376d55c810fc973135926f63'; // 테스트키
+
+        // 현재 URL 체크하여 가동이면 가동KEY
+        if(window.location.hostname == 'pitapats.github.io'){
+          // real
+          apiKey = 'live_9c0da748b4d6c40ab3b3d3258710357e8fac6573e6cc76cd91db553e0f9a320f45f81a5b3146a2d2bff59f3beec92fa6';
+        }
         
         let requestUrl = apiUrl + '?' + queryString;
         let response = await fetch(requestUrl, {
           headers: {
-            'x-nxopen-api-key': 'test_9c0da748b4d6c40ab3b3d3258710357e086fc6dacbaa3aba2d497ea29c71951c41fbe26d376d55c810fc973135926f63'
-            //'x-nxopen-api-key': 'live_9c0da748b4d6c40ab3b3d3258710357e8fac6573e6cc76cd91db553e0f9a320f45f81a5b3146a2d2bff59f3beec92fa6'
+            'x-nxopen-api-key': apiKey
           }
         });
         let data = await response.json();
