--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       // fn_search();
 
       function reset(){
-        document.querySelector('.card-wrap').innerHTML = ``;
+        document.querySelector('.char-wrap').innerHTML = ``;
       }
 
       // 기본정보
